syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto/walletnode";
import "common_wn.proto";

package walletnode;

service RegisterArtwork {
    // Session informs the supernode its position (primary/secondary).
    // Returns `SessID` that are used by all other rpc methods to identify the task on the supernode. By sending `sessID` in the Metadata.
    // The stream is used by the parties to inform each other about the cancellation of the task.
    rpc Session(stream SessionRequest) returns (stream SessionReply);

    // AcceptedNodes returns peers of the secondary supernodes connected to it.
    rpc AcceptedNodes(AcceptedNodesRequest) returns (AcceptedNodesReply);

    // ConnectTo requests to connect to the primary supernode.
    rpc ConnectTo(ConnectToRequest) returns (ConnectToReply);

    // MeshNodes informs to SNs other SNs on same meshNodes created for this registration request
    rpc MeshNodes(MeshNodesRequest) returns (MeshNodesReply);

    // SendRegMetadata informs to SNs metadata required for registration request like current block hash, creator,..
    rpc SendRegMetadata(SendRegMetadataRequest) returns (SendRegMetadataReply);

    // ProbeImage uploads the resampled image compute and return a fingerpirnt.
    rpc ProbeImage(stream ProbeImageRequest) returns (ProbeImageReply);

    // SendArtTicket sends a signed art-ticket to the supernode.
    rpc SendSignedNFTTicket(SendSignedNFTTicketRequest) returns (SendSignedNFTTicketReply);

    // SendPreBurntFeeTxid sends tx_id of 10% burnt transaction fee to the supernode.
    rpc SendPreBurntFeeTxid(SendPreBurntFeeTxidRequest) returns (SendPreBurntFeeTxidReply);

    // SendTicket sends a ticket to the supernode.
    rpc SendTicket(SendTicketRequest) returns (SendTicketReply);

    // Upload the image after pq signature is appended along with its thumbnail coordinates
    rpc UploadImage(stream UploadImageRequest) returns (UploadImageReply);
}

message EncoderParameters {
  bytes oti = 1;   //12 bytes
}

message SendSignedNFTTicketRequest {
    bytes nft_ticket = 1;
    bytes creator_signature = 2;
    string key1 = 3;
    string key2 = 4;
    EncoderParameters encode_parameters = 5;
    bytes dd_fp_files = 7;
    bytes rq_files = 8;
}

message SendSignedNFTTicketReply {
    int64 registration_fee = 1;
}

message SendPreBurntFeeTxidRequest {
    string txid = 1;
}

message SendPreBurntFeeTxidReply {
    string NFT_reg_txid = 1;
}

message SendTicketRequest {
    bytes ticket = 1;
    string ticket_signature = 2;
    string fgpt= 3;
    string fgpt_signature = 4;
    string fee_txid = 5;
    bytes thumbnail = 6;
}

message SendTicketReply {
    string ticket_txid = 1;
}

message UploadImageRequest {
    message Coordinate {
      int64 top_left_x = 1;
      int64 top_left_y = 2;
      int64 bottom_right_x = 3;
      int64 bottom_right_y = 4;
    }
    message MetaData {
      // size of the image
      int64 size = 1;
      // valid image format such as jpeg, png ...
      string format = 2;
      // sha3-256 hash of the image
      bytes hash = 3;
      // thumbnail of the image
      Coordinate thumbnail = 4;
    }
    oneof payload {
      bytes image_piece = 1;
      // Should be included in the last piece of image only
      MetaData meta_data = 2;
    }
}

message UploadImageReply {
   bytes preview_thumbnail_hash = 1;
   bytes medium_thumbnail_hash = 2;
   bytes small_thumbnail_hash = 3;
}
